syntax = "proto3";

package buildbarn.configuration.bb_storage;

import "pkg/proto/configuration/blobstore/blobstore.proto";

option go_package = "github.com/buildbarn/bb-storage/pkg/proto/configuration/bb_storage";

message JaegerConfiguration {
  // Jaeger agent endpoint, defaults to "127.0.0.1:6831".
  string agent_endpoint = 1;

  // Jaeger collector endpoint, defaults to "http://127.0.0.1:14268/api/traces".
  string collector_endpoint = 2;

  // OpenTracing service name, default to the binary name, e.g. bb_storage.
  string service_name = 3;

  // Whether or not all traces should be sampled, defaults to false.
  bool always_sample = 4;
}

message StorageConfiguration {
  // Blobstore configuration for the bb-storage instance.
  buildbarn.configuration.blobstore.BlobstoreConfiguration blobstore = 1;

  // Jaeger configuration for tracing.
  JaegerConfiguration jaeger = 2;

  // Address on which to listen to expose Prometheus metrics. Defaults to ":80".
  string metrics_listen_address = 3;

  // Address on which to listen for RPCs. Defaults to ":8980".
  string grpc_listen_address = 4;

  // List of schedulers available capable of building, mapping name to endpoints.
  map<string, string> schedulers = 5;

  // List of instances which can upload to the Action Cache.
  repeated string allow_ac_updates_for_instances = 6;
}
